test/end-to-end/compile-errors/variant-member-purity.crow
main void()
	info log "done"

v variant
m record mut, v variant-member
